fix: sale banners on mobile

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -168,3 +168,56 @@
         background-color: #4FAB44;
     }
 }
+
+/* iPhone (альбомный режим) */
+@media only screen and (orientation: landscape) and (min-device-width: 320px) and (max-device-width: 932px) {
+    .hero {
+        padding: 1rem 0;
+    }
+
+    .join-btn-container {
+        padding: 2rem 0;
+    }
+
+    .sales-container {
+        width: 80%;
+        aspect-ratio: auto;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    .up-left {
+        grid-row: 1;
+        grid-column: 1;
+        background-color: #6289FF;
+        aspect-ratio: 1;
+    }
+
+    .down-left {
+        grid-row: 2;
+        grid-column: 1;
+        background-color: #EC5D8F;
+        aspect-ratio: 1;
+    }
+
+    .main {
+        grid-row: 1 / 3;
+        grid-column: 2 / 5;
+        background-color: #6D48DF;
+        aspect-ratio: 3 / 2;
+    }
+
+    .up-right {
+        grid-row: 3 / 5;
+        grid-column: 1 / 3;
+        background-color: #FF6262;
+        aspect-ratio: 1;
+    }
+
+    .down-right {
+        grid-row: 3 / 5;
+        grid-column: 3 / 5;
+        background-color: #4FAB44;
+        aspect-ratio: 1;
+    }
+}
